--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -180,15 +180,303 @@
        "4  In a city of coaching centers known to train I...  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('data/netflix_titles.csv')\n",
+    "df = pd.read_csv('data/netflix_titles.csv') #loaded dataset \n",
     "\n",
-    "df.head()"
+    "df.head() #outputted first 5 rows of the dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>show_id</th>\n",
+       "      <th>type</th>\n",
+       "      <th>title</th>\n",
+       "      <th>director</th>\n",
+       "      <th>cast</th>\n",
+       "      <th>country</th>\n",
+       "      <th>date_added</th>\n",
+       "      <th>release_year</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>listed_in</th>\n",
+       "      <th>description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>8802</th>\n",
+       "      <td>s8803</td>\n",
+       "      <td>Movie</td>\n",
+       "      <td>Zodiac</td>\n",
+       "      <td>David Fincher</td>\n",
+       "      <td>Mark Ruffalo, Jake Gyllenhaal, Robert Downey J...</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>November 20, 2019</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>R</td>\n",
+       "      <td>158 min</td>\n",
+       "      <td>Cult Movies, Dramas, Thrillers</td>\n",
+       "      <td>A political cartoonist, a crime reporter and a...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8803</th>\n",
+       "      <td>s8804</td>\n",
+       "      <td>TV Show</td>\n",
+       "      <td>Zombie Dumb</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>July 1, 2019</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>TV-Y7</td>\n",
+       "      <td>2 Seasons</td>\n",
+       "      <td>Kids' TV, Korean TV Shows, TV Comedies</td>\n",
+       "      <td>While living alone in a spooky town, a young g...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8804</th>\n",
+       "      <td>s8805</td>\n",
+       "      <td>Movie</td>\n",
+       "      <td>Zombieland</td>\n",
+       "      <td>Ruben Fleischer</td>\n",
+       "      <td>Jesse Eisenberg, Woody Harrelson, Emma Stone, ...</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>November 1, 2019</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>R</td>\n",
+       "      <td>88 min</td>\n",
+       "      <td>Comedies, Horror Movies</td>\n",
+       "      <td>Looking to survive in a world taken over by zo...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8805</th>\n",
+       "      <td>s8806</td>\n",
+       "      <td>Movie</td>\n",
+       "      <td>Zoom</td>\n",
+       "      <td>Peter Hewitt</td>\n",
+       "      <td>Tim Allen, Courteney Cox, Chevy Chase, Kate Ma...</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>January 11, 2020</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>PG</td>\n",
+       "      <td>88 min</td>\n",
+       "      <td>Children &amp; Family Movies, Comedies</td>\n",
+       "      <td>Dragged from civilian life, a former superhero...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8806</th>\n",
+       "      <td>s8807</td>\n",
+       "      <td>Movie</td>\n",
+       "      <td>Zubaan</td>\n",
+       "      <td>Mozez Singh</td>\n",
+       "      <td>Vicky Kaushal, Sarah-Jane Dias, Raaghav Chanan...</td>\n",
+       "      <td>India</td>\n",
+       "      <td>March 2, 2019</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>TV-14</td>\n",
+       "      <td>111 min</td>\n",
+       "      <td>Dramas, International Movies, Music &amp; Musicals</td>\n",
+       "      <td>A scrappy but poor boy worms his way into a ty...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     show_id     type        title         director  \\\n",
+       "8802   s8803    Movie       Zodiac    David Fincher   \n",
+       "8803   s8804  TV Show  Zombie Dumb              NaN   \n",
+       "8804   s8805    Movie   Zombieland  Ruben Fleischer   \n",
+       "8805   s8806    Movie         Zoom     Peter Hewitt   \n",
+       "8806   s8807    Movie       Zubaan      Mozez Singh   \n",
+       "\n",
+       "                                                   cast        country  \\\n",
+       "8802  Mark Ruffalo, Jake Gyllenhaal, Robert Downey J...  United States   \n",
+       "8803                                                NaN            NaN   \n",
+       "8804  Jesse Eisenberg, Woody Harrelson, Emma Stone, ...  United States   \n",
+       "8805  Tim Allen, Courteney Cox, Chevy Chase, Kate Ma...  United States   \n",
+       "8806  Vicky Kaushal, Sarah-Jane Dias, Raaghav Chanan...          India   \n",
+       "\n",
+       "             date_added  release_year rating   duration  \\\n",
+       "8802  November 20, 2019          2007      R    158 min   \n",
+       "8803       July 1, 2019          2018  TV-Y7  2 Seasons   \n",
+       "8804   November 1, 2019          2009      R     88 min   \n",
+       "8805   January 11, 2020          2006     PG     88 min   \n",
+       "8806      March 2, 2019          2015  TV-14    111 min   \n",
+       "\n",
+       "                                           listed_in  \\\n",
+       "8802                  Cult Movies, Dramas, Thrillers   \n",
+       "8803          Kids' TV, Korean TV Shows, TV Comedies   \n",
+       "8804                         Comedies, Horror Movies   \n",
+       "8805              Children & Family Movies, Comedies   \n",
+       "8806  Dramas, International Movies, Music & Musicals   \n",
+       "\n",
+       "                                            description  \n",
+       "8802  A political cartoonist, a crime reporter and a...  \n",
+       "8803  While living alone in a spooky town, a young g...  \n",
+       "8804  Looking to survive in a world taken over by zo...  \n",
+       "8805  Dragged from civilian life, a former superhero...  \n",
+       "8806  A scrappy but poor boy worms his way into a ty...  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.tail() #outputted last 5 rows of the dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 8807 entries, 0 to 8806\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column        Non-Null Count  Dtype \n",
+      "---  ------        --------------  ----- \n",
+      " 0   show_id       8807 non-null   object\n",
+      " 1   type          8807 non-null   object\n",
+      " 2   title         8807 non-null   object\n",
+      " 3   director      6173 non-null   object\n",
+      " 4   cast          7982 non-null   object\n",
+      " 5   country       7976 non-null   object\n",
+      " 6   date_added    8797 non-null   object\n",
+      " 7   release_year  8807 non-null   int64 \n",
+      " 8   rating        8803 non-null   object\n",
+      " 9   duration      8804 non-null   object\n",
+      " 10  listed_in     8807 non-null   object\n",
+      " 11  description   8807 non-null   object\n",
+      "dtypes: int64(1), object(11)\n",
+      "memory usage: 825.8+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info() #outputted information about the Dataset such as datatypes, columns etc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>release_year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>8807.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>2014.180198</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>8.819312</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1925.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>2013.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>2017.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>2019.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>2021.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       release_year\n",
+       "count   8807.000000\n",
+       "mean    2014.180198\n",
+       "std        8.819312\n",
+       "min     1925.000000\n",
+       "25%     2013.000000\n",
+       "50%     2017.000000\n",
+       "75%     2019.000000\n",
+       "max     2021.000000"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe() #outputtted basic statistic summary of the dataset"
    ]
   }
  ],
