Tested loc and iloc features

--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -1332,6 +1332,51 @@
    "source": [
     "df.dropna() #Removes missing values"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Movie'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[0,\"type\"] #Testing out loc feature and its selection feature"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "show_id                       s1\n",
+       "type                       Movie\n",
+       "title       Dick Johnson Is Dead\n",
+       "director         Kirsten Johnson\n",
+       "cast                         NaN\n",
+       "Name: 0, dtype: object"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[0,0:5] #Testing out iloc feature and its feature selection using index based selection"
+   ]
   }
  ],
  "metadata": {
